started the API

--- a/iframe/i1.html
+++ b/iframe/i1.html
@@ -9,6 +9,8 @@
     <script src="main.js"></script>
   </head>
   <body>
+    <h1>i1</h1>
+    <iframe src="https://arpitkaushal.github.io/me/i1.html" width="300px" height="500px"></iframe>
     <form class="form-horizontal">
       <fieldset>
         <!-- Form Name -->
